# zilpzalp

./: .dockerignore  .gitignore  .release-please-manifest.json  404.html  CLAUDE.md  CONTRIBUTING.md  Dockerfile.backend  Dockerfile.mkdocs  LICENSE  README.md  docker-compose.yml  docker-entrypoint.sh  index.html  release-please-config.json  sitemap.xml
.claude/: settings.json
backend/: CHANGELOG.md  config.default.yaml  config.example.yaml  pyproject.toml
backend/src/zilpzalp/: __init__.py  analyzer.py  cache.py  config.py  document.py  extractor.py  main.py  processor.py  queue.py  suggestion.py  watcher.py  worker.py
backend/src/zilpzalp/web/: health.py  i18n.py  naming.py  routes.py
backend/src/zilpzalp/web/locales/: de.json  en.json
backend/src/zilpzalp/web/static/: app.js  styles.css
backend/src/zilpzalp/web/templates/: _extract_pane.html  _overview.html  _queue_list.html  _remove_control.html  _summary_modal.html  _toast.html  base.html  config.html  overview.html  queue.html  review.html
backend/tests/: conftest.py  test_analysis_pipeline.py  test_analyzer.py  test_cache.py  test_config.py  test_document.py  test_extractor.py  test_health.py  test_i18n.py  test_main.py  test_naming.py  test_processor.py  test_queue.py  test_routes.py  test_smoke.py  test_suggestion.py  test_watcher.py  test_worker.py
backend/tests/fixtures/: SCHEMA_NOTES.md  invoice.odl.json  make_fixtures.py
configuration/: index.html
docs/: backlog.md  roadmap.md  ui.md  vision.md
installation/: index.html
mkdocs/: mkdocs.yml
scripts/: devserver.sh
usage/: index.html
(+74 files in other folders)
