[project]
name = "zilpzalp"
version = "0.1.0"
description = "Halb-automatische Dokumentenablage"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "opendataloader-pdf>=2.0",
    "watchdog>=4.0",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.32",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "httpx>=0.27",
    "ruff>=0.5",
    "pypdf>=4.0",
    "reportlab>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zilpzalp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: benoetigt eine echte JVM (OpenDataLoader); langsam",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
